--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             <use href="./images/icons.svg#mobile-menu" ></use>
           </svg>
         </button>
+        
+        </div> 
       </div>
     </header>
     <main>
@@ -562,11 +564,73 @@
         </form>
       </div>
    </div>
-   <div class="menu-mobile js-menu-container" id="mobile-menu">
+   <div class="menu-container js-menu-container" id="mobile-menu">
     <button class="close-menu js-close-menu">
       <svg class="menu-close-icon" width="8" height="8"><use href="./images/icons.svg#icon-close" ></use></svg>
     </button>
+    <div class="mobile-menu-info">
+      <ul class="menu-list">
+        <li><a href="./index.html" class="mobile-item mobile-item-current" >Studio</a>
+        </li>
+        <li><a href="#" class="mobile-item">Portfolio</a></li>
+        <li><a href="#" class="mobile-item">Contacts</a></li>
+      </ul>
+      <address class="addres-info-menu">
+        <ul class="information-menu">
+          <li><a href="mailto:info@devstudio.com" class="link-address-menu information-menu-current">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="link-address-menu">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
+      <ul class="icons-menu">
+        <li class="icons-menu" >
+          <a href="https://www.instagram.com/" target="_blank" class="link-icon-menu">
+            <svg 
+          class="icon"
+          width="24"
+          height="24"
+          >
+          <use href='./images/icons.svg#icon-instagram-2'></use>
+        </svg>
+          </a>
+        </li>
+        <li class="icons-menu" >
+          <a href="https://www.twitter.com/" target="_blank" class="link-icon-menu">
+            <svg 
+              class="icon"
+              width="24"
+              height="24"
+              >
+              <use href='./images/icons.svg#icon-twitter-2'></use>
+            </svg>
+          </a>
+        </li>
+        <li class="icons-social" >
+          <a href="https://www.facebook.com/" target="_blank" class="link-icon-menu">
+            <svg 
+              class="icon"
+              width="24"
+              height="24"
+              >
+              <use href='./images/icons.svg#icon-facebook-2'></use>
+            </svg>
+            </a>
+        </li>
+        <li class="icons-social" >
+          <a href="https://www.linkedin.com/" target="_blank" class="link-icon-menu">
+            <svg 
+              class="icon"
+              width="24"
+              height="24"
+              >
+              <use href='./images/icons.svg#icon-linkedin-2'></use>
+            </svg>
+            </a>
+        </li>
+      </ul>
+    </div>
+    </ul>
    </div>
+   <script defer src="./js/mobile-menu.js"></script>
    <script src='./js/modal.js'></script>
   </body>
 </html>
